--- a/examples/Configuration API/FormControl/FormControl.csproj
+++ b/examples/Configuration API/FormControl/FormControl.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -16,7 +16,6 @@
     </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -110,7 +109,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\NLog\NLog.csproj">
       <Project>{CB8BE551-CB33-44A6-B793-1B266862EB25}</Project>
-      <Name>NLog %28NLog\NLog%29</Name>
+      <Name>NLog</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\WinForm\WinForm.csproj">
       <Project>{D77119C2-746D-4A2D-B06B-AB2157F226E1}</Project>
