--- a/examples/ConfigurationAPI/ASPNetTrace/web.config
+++ b/examples/ConfigurationAPI/ASPNetTrace/web.config
@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
 	<system.web>
-		<compilation defaultLanguage="c#" debug="true"/>
+		<compilation defaultLanguage="c#" debug="true" targetFramework="4.0"/>
 		<!-- the following line enables ASP.NET trace -->
 		<trace enabled="true" requestLimit="10" pageOutput="false" traceMode="SortByTime" localOnly="true"/>
-		<xhtmlConformance mode="Legacy"/></system.web>
+		<xhtmlConformance mode="Legacy"/>
+		<pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/></system.web>
 </configuration>
