remove INetworkSenderFactory interface

--- a/Network/Network.csproj
+++ b/Network/Network.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -50,10 +50,8 @@
     <Compile Include="Layouts\Log4JXmlEventLayout.cs" />
     <Compile Include="Internal\ThreadIDHelper.cs" />
     <Compile Include="Common\NetworkSenders\HttpNetworkSender.cs" />
-    <Compile Include="Common\NetworkSenders\INetworkSenderFactory.cs" />
     <Compile Include="Common\NetworkSenders\ISocket.cs" />
     <Compile Include="Common\NetworkSenders\NetworkSender.cs" />
-    <Compile Include="Common\NetworkSenders\NetworkSenderFactory.cs" />
     <Compile Include="Internal\NetworkSenders\SocketProxy.cs" />
     <Compile Include="Common\NetworkSenders\TcpNetworkSender.cs" />
     <Compile Include="Common\NetworkSenders\UdpNetworkSender.cs" />
@@ -67,7 +65,7 @@
   <ItemGroup>
     <ProjectReference Include="..\NLog\NLog.csproj">
       <Project>{CB8BE551-CB33-44A6-B793-1B266862EB25}</Project>
-      <Name>NLog %28NLog\NLog%29</Name>
+      <Name>NLog</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
