testing environment may have different line ending settings

--- a/NLog.Tests/NLog.Tests.csproj
+++ b/NLog.Tests/NLog.Tests.csproj
@@ -134,6 +134,7 @@
     <Compile Include="LayoutRenderers\GarbageCollectorTests.cs" />
     <Compile Include="NLogTestBase.cs" />
     <Compile Include="LineCollection.cs" />
+    <Compile Include="Toolkit.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ConfigFiles\included.nlog" />
